--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,46 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/background"
+    android:scaleType="centerInside"
     tools:context="com.example.thodlydugue.kizinlakayapp.HomeActivity">
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        app:srcCompat="@drawable/logomodify"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        app:srcCompat="@drawable/home21" />
+    <!-- <ImageView
+      android:id="@+id/imageView5"
+      android:layout_width="match_parent"
+      android:layout_height="500dp"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentTop="true"
+      app:srcCompat="@drawable/home21" />-->
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="189dp"
-        android:background="@color/colorPrimary"
+        android:layout_height="100dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-
-        android:weightSum="1">
-
+        android:alpha="0.6"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_weight="1.13"
-            android:gravity="center_horizontal"
+            android:layout_height="110dp"
+            android:layout_marginTop="20dp"
             android:text="Bienvenue"
-
-            android:textColor="@color/white"
-            android:textSize="50dp"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_dark"
+            android:textSize="40dp"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="59dp"
+        android:text="KIZIN LAKAY"
+        android:textColor="#FFF"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
