--- a/app/src/main/res/layout/recette_layout.xml
+++ b/app/src/main/res/layout/recette_layout.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
     android:padding="2dp">
 
     <!--
@@ -37,15 +36,13 @@
             android:orientation="horizontal">
 
 
-
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imrecette"
                 android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_height="100dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="5dp"
+                android:layout_marginTop="30dp"
                 android:elevation="4dp"
                 card_view:riv_border_color="#ffffff"
                 card_view:riv_border_width="2dp"
@@ -79,8 +76,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-
 
 
             <TextView
