--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -122,31 +122,19 @@
     android:layout_marginTop="20dp"
     android:padding="2dp">
 
-    <!--
-    <ImageView
-        android:id="@+id/ivArticle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_wifi"
-        android:background="@color/white"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"/>
-
-       -->
-
     <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbardetails"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="#f50206"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:titleTextColor="@android:color/white"
-        android:background="#f50206"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        card_view:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        card_view:titleTextColor="@android:color/white" />
+
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -182,6 +170,7 @@
                 android:text="INGREDIENTS"
                 android:textStyle="bold"
                 android:textSize="20sp"
+                android:textColor="@color/colorPrimary"
                 android:layout_marginBottom="5dp"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/ivrecette" />
@@ -190,16 +179,16 @@
                 android:id="@+id/titlerecette"
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="bottom"
+                android:alpha="0.8"
+                android:background="#5c1b1b1b"
+                android:gravity="center_vertical"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
-                android:layout_gravity="bottom"
-                android:gravity="center_vertical"
-                android:background="#5c1b1b1b"
-                android:alpha="0.8"
-                android:textColor="#fff"
-                android:textSize="26sp"
                 android:text="Test"
-                android:layout_alignParentStart="true" />
+                android:textColor="#fff"
+                android:textSize="22sp" />
 
 
 
@@ -224,18 +213,20 @@
                     android:gravity="center"
                     tools:text="Ingredients"
                     android:layout_weight="3.50"/>
+
                 <TextView
                     android:id="@+id/prepara"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingBottom="2dp"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="5dp"
-                    android:paddingBottom="2dp"
                     android:text="PREPARATION"
-                    android:textStyle="bold"
-                    android:layout_gravity="center"
-                    android:textSize="20sp" />
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
 
