--- a/app/src/main/res/layout/recette_layout.xml
+++ b/app/src/main/res/layout/recette_layout.xml
@@ -40,22 +40,22 @@
         android:scaleType="fitXY"
         android:layout_marginBottom="50dp"/>
 
-    <TextView
-        android:id="@+id/txtrecette"
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:layout_gravity="bottom"
-        android:gravity="center_vertical"
-        android:background="#5c1b1b1b"
-        android:alpha="0.8"
-        android:textColor="#fff"
-        android:textSize="26sp"
-        android:text="Test"
-        android:layout_alignBottom="@+id/imrecette"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        <TextView
+            android:id="@+id/txtrecette"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:layout_alignBottom="@+id/imrecette"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="bottom"
+            android:alpha="0.8"
+            android:background="#5c1b1b1b"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:text="Test"
+            android:textColor="#fff"
+            android:textSize="22sp" />
 
 
         <TextView
