--- a/app/src/main/res/layout/layoutview_menu.xml
+++ b/app/src/main/res/layout/layoutview_menu.xml
@@ -21,7 +21,7 @@
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:background="@color/colorPrimary" />
 
-        <ImageButton
+     <!--   <ImageButton
             android:id="@+id/btnAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
             android:background="@color/colorPrimary"
             app:srcCompat="@drawable/ic_account"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true" />-->
     </RelativeLayout>
 
 
