--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -19,22 +19,21 @@
         card_view:titleTextColor="@android:color/white" />
 
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <android.support.v7.widget.CardView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            card_view:cardCornerRadius="3dp"
-            android:layout_marginTop="9dp"
+            android:layout_marginBottom="0dp"
             android:layout_marginLeft="9dp"
             android:layout_marginRight="9dp"
-            card_view:cardElevation="0.01dp"
-            android:layout_marginBottom="0dp">
+            android:layout_marginTop="9dp"
+            card_view:cardCornerRadius="3dp"
+            card_view:cardElevation="0.01dp">
 
             <RelativeLayout
                 android:id="@+id/top_layout"
@@ -45,19 +44,20 @@
                     android:id="@+id/ivrecette"
                     android:layout_width="fill_parent"
                     android:layout_height="250dp"
-                    android:scaleType="centerCrop"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="10dp"
+                    android:scaleType="centerCrop" />
 
                 <TextView
+                    android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="INGREDIENTS"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_marginBottom="5dp"
+                    android:layout_below="@+id/ivrecette"
                     android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/ivrecette" />
+                    android:layout_marginBottom="5dp"
+                    android:text="INGREDIENTS"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/titlerecette"
@@ -75,13 +75,12 @@
                     android:textSize="22sp" />
 
 
-
                 <LinearLayout
-                    android:layout_width="match_parent"
                     android:id="@+id/linearIn"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_below="@+id/ivrecette"
+                    android:orientation="vertical"
                     android:weightSum="1">
 
 
@@ -91,12 +90,12 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_marginTop="25dp"
+                        android:layout_weight="3.50"
+                        android:gravity="center"
                         android:textColor="@color/cardview_dark_background"
                         android:textSize="14sp"
                         android:textStyle="bold|italic"
-                        android:gravity="center"
-                        tools:text="Ingredients"
-                        android:layout_weight="3.50"/>
+                        tools:text="Ingredients" />
 
                     <TextView
                         android:id="@+id/prepara"
@@ -115,17 +114,43 @@
 
 
                 <TextView
+
                     android:id="@+id/preparation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/linearIn"
+                    android:paddingBottom="2dp"
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="5dp"
-                    android:paddingBottom="2dp"
-                    android:textColor="#ff272727"
-                    android:textSize="15sp"
                     android:text="Preparation"
-                    android:layout_below="@+id/linearIn" />
+                    android:textColor="#ff272727"
+                    android:textSize="15sp" />
+
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/btnfavorite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|end"
+                    android:layout_marginLeft="@dimen/fab_margin"
+                    android:layout_marginRight="@dimen/fab_margin"
+                    card_view:srcCompat="@android:drawable/btn_star"
+                    android:layout_alignBottom="@+id/ivrecette"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="23dp" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/btnshare"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|end"
+                    android:layout_marginLeft="@dimen/fab_margin"
+                    android:layout_marginRight="@dimen/fab_margin"
+                    card_view:srcCompat="@android:drawable/ic_menu_share"
+                    android:layout_marginEnd="12dp"
+                    android:layout_alignBottom="@+id/ivrecette"
+                    android:layout_toStartOf="@+id/btnfavorite" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
