--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -132,13 +132,13 @@
                     android:id="@+id/btnshare"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|end"
-                    android:layout_marginLeft="@dimen/fab_margin"
-                    android:layout_marginRight="@dimen/fab_margin"
-                    card_view:srcCompat="@android:drawable/ic_menu_share"
                     android:layout_alignBottom="@+id/textView4"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginBottom="13dp" />
+                    android:layout_gravity="bottom|end"
+                    android:layout_marginBottom="13dp"
+                    android:layout_marginLeft="@dimen/fab_margin"
+                    android:layout_marginRight="@dimen/fab_margin"
+                    card_view:srcCompat="@android:drawable/ic_menu_share" />
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/btnfavorite"
@@ -148,8 +148,9 @@
                     android:layout_marginLeft="@dimen/fab_margin"
                     android:layout_marginRight="@dimen/fab_margin"
                     card_view:srcCompat="@drawable/ic_favorite"
-                    android:layout_alignBottom="@+id/btnshare"
-                    android:layout_marginBottom="13dp" />
+                    android:layout_alignTop="@+id/btnshare"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="13dp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
