--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorPrimary1">#fd7507</color>
     <color name="gris_noir">#f5f3a6</color>
     <color name="red">#f40509</color>
+    <color name="blue">#a1b4f2</color>
 </resources>
