--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -138,7 +138,9 @@
                     android:layout_marginBottom="13dp"
                     android:layout_marginLeft="@dimen/fab_margin"
                     android:layout_marginRight="@dimen/fab_margin"
-                    card_view:srcCompat="@android:drawable/ic_menu_share" />
+                    card_view:srcCompat="@android:drawable/ic_menu_share"
+                     />
+
 
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/btnfavorite"
@@ -148,9 +150,9 @@
                     android:layout_marginLeft="@dimen/fab_margin"
                     android:layout_marginRight="@dimen/fab_margin"
                     card_view:srcCompat="@drawable/ic_favorite"
-                    android:layout_alignTop="@+id/btnshare"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginStart="13dp" />
+                    android:layout_alignBottom="@+id/btnshare"
+                    android:layout_marginBottom="13dp" />
+
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
