--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -9,7 +9,7 @@
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:statusBarBackground="@color/colorPrimary">
+        app:statusBarBackground="@color/blue">
 
         <!--Recyclerview -->
 
@@ -34,7 +34,8 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#f50206"
+                android:background="#fcfcfd"
+
                 >
 
 
@@ -46,8 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:background="#f50206"
-                app:srcCompat="@drawable/ic_backbuttonlight" />
+                app:srcCompat="@drawable/ic_backbutton" />
         </RelativeLayout>
 
 
